# agentid

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  verify.sh
.github/workflows/: ci.yml
agentid/: __main__.py  config.py
agentid/api/: app.py  deps.py  middleware.py
agentid/core/: agent_matcher.py  anti_tamper.py  decomposer.py  did.py  friend_network.py  network.py  scoring.py  signing.py  task_dependency.py
agentid/db/: session.py
agentid/models/: agent.py  authorization.py  event.py  friend.py  network.py  project.py  score.py  task_tree.py
agentid/worker/: scheduler.py  task_tree_worker.py
contracts/: AgentRegistry.sol  EventLog.sol
deploy/: .env.prod  DEPLOY.md  deploy.sh  docker-compose.prod.yml
docs/: FEATURES.md  architecture.md  changelog_20260420.md  changelog_20260421.md  discussion_log_20260419.md  ecosystem_map.md  event_admission_policy.md  governance_foundation.md  governance_todo.md  index.md  installation.md  integration_requirements.md  knowledge_graph.md  product_plan.md  score_finalization_policy.md  source_tiering_policy.md  task_tree_design.md
integrations/claude_code/: agentid.md
integrations/hermes/: hermes_adapter.py
integrations/openclaw/: openclaw_adapter.js
sdk/: __init__.py  client.py
tests/integration/: conftest.py  test_api.py
tests/unit/: test_agent_matcher.py  test_core.py  test_decomposer.py  test_friend_network.py  test_network.py  test_scheduler_weighting.py  test_task_dependency.py  (+1 more)
(+14 files in other folders)
