[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentid"
version = "0.4.0"
description = "Decentralized identity and reputation system for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "bcrypt>=4.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
agentid = "agentid.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agentid", "sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
